remove bug in processing the html files

--- a/envision/MIME_to_csv.ipynb
+++ b/envision/MIME_to_csv.ipynb
@@ -176,7 +176,10 @@
     "    input_html = pd.read_html(filepath, thousands='')\n",
     "    # the data of interest appears every three dataframes, starting from index\n",
     "    # two, the end is at -6 to clip the unnecessary data at the end.\n",
-    "    processed_html = input_html[2:-6:3]\n",
+    "    # processed_html = input_html[2:-6:3]\n",
+    "    # this seems to work better, because it checks if a decimal separator (,)\n",
+    "    # exists in the string \n",
+    "    processed_html = [x for x in input_html if ',' in str(x[0][0])]\n",
     "    # remove the index from the dataframes\n",
     "    processed_html_values = [x.iloc[0] for x in processed_html]\n",
     "    # concat the dataframes\n",
