--- a/matplotlib-to-tikz/colorbar.tex
+++ b/matplotlib-to-tikz/colorbar.tex
@@ -280,7 +280,7 @@ point meta min=1,
 point meta max=3,
 colorbar style={ytick={1.2,1.6,2,2.4,2.8},yticklabels={$1.2$,$1.6$,$2.0$,$2.4$,$2.8$},minor ytick={},ylabel={}}
 ]
-\addplot graphics [includegraphics cmd=\pgfimage,xmin=0, xmax=4, ymin=0, ymax=3] {thetest_img000.png};
+\addplot graphics [includegraphics cmd=\pgfimage,xmin=0, xmax=4, ymin=0, ymax=3] {colorbar_img000.png};
 \path [draw=lightgray!20.0!black, fill opacity=0] (axis cs:0,1)
 --(axis cs:4,1);
 
