update notebook with correct output name for colorbar.tex

--- a/matplotlib-to-tikz/matplotlib-to-tikz.ipynb
+++ b/matplotlib-to-tikz/matplotlib-to-tikz.ipynb
@@ -132,7 +132,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
     "plt.rc('text', usetex=True)\n",
     "fig, ax = plt.subplots()\n",
     "ax = sns.heatmap(df, linewidths=.5, ax=ax, )\n",
-    "tikz_save('colormap.tex', figure=fig, strict=True)"
+    "tikz_save('colorbar.tex', figure=fig, strict=True)"
    ]
   }
  ],
