add code snippet to remove the unnecessary lines automatically in colorbar.tex

--- a/matplotlib-to-tikz/matplotlib-to-tikz.ipynb
+++ b/matplotlib-to-tikz/matplotlib-to-tikz.ipynb
@@ -2,9 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
        "sys.version_info(major=2, minor=7, micro=11, releaselevel='final', serial=0)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -52,7 +52,7 @@
        "'1.5.1'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -74,7 +74,7 @@
        "'0.7.0'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -96,7 +96,7 @@
        "'0.6.11'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,6 +149,39 @@
     "fig, ax = plt.subplots()\n",
     "ax = sns.heatmap(df, linewidths=.5, ax=ax, )\n",
     "tikz_save('colorbar.tex', figure=fig, strict=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "remove unnecessary data from colorbar.tex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "writeswitch = ['\\\\begin{axis}[\\n', 'colorbar,\\n', ']\\n', '\\\\end{axis}\\n']\n",
+    "# open original file\n",
+    "with open('./colorbar.tex', 'r') as f:\n",
+    "    data = f.readlines()\n",
+    "# get the indices in the data to delete the unnecessary lines \n",
+    "indices = map(lambda element: data.index(element) if element in data else None, writeswitch)\n",
+    "# generate list with line numbers to keep\n",
+    "data_indices = range(0, indices[0]+1) \\\n",
+    "    + range(indices[1], indices[2]+1) + range(indices[3], len(data))\n",
+    "output_data = [data[i] for i in data_indices]\n",
+    "# add the hide axis line after \\begin{axis}\n",
+    "output_data.insert(data_indices[0], 'hide axis,\\n')\n",
+    "output_data = ''.join(output_data)\n",
+    "# write out to new file\n",
+    "with open('./colorbar_final.tex', 'w') as f:\n",
+    "    f.write(output_data)"
    ]
   }
  ],
